--- a/cwsoffline/cwsstore/app/static/css/styles.css
+++ b/cwsoffline/cwsstore/app/static/css/styles.css
@@ -203,6 +203,22 @@ footer {
     z-index: 100;
 }
 
+.DpcOrc {
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 1.5rem;
+    color: var(--gm3-sys-color-on-surface-variant);
+    font-family: "Product Sans", "Google Sans";
+    margin-left: 8px;
+    text-transform: lowercase;
+
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
 footer p {
     margin: 0;
     color: var(--secondary-text);
