--- a/cwsoffline/cwsstore/app/templates/index.html
+++ b/cwsoffline/cwsstore/app/templates/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offline Chrome Web Store</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="icon" href="/static/images/icon_48px.png" sizes="48x48">
+    <link rel="icon" href="/static/images/icon_96px.png" sizes="96x96">
+    <link rel="icon" href="/static/images/icon_144px.png" sizes="144x144">
 </head>
 <body>
     <header>
