--- a/cwsoffline/cwsstore/app/static/css/styles.css
+++ b/cwsoffline/cwsstore/app/static/css/styles.css
@@ -204,15 +204,14 @@ footer {
 }
 
 .DpcOrc {
-    font-family: "Google Sans", Roboto, Arial, sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
+    /* font-size: 1rem;
+    font-weight: 600;
     letter-spacing: 0;
     line-height: 1.5rem;
     color: var(--gm3-sys-color-on-surface-variant);
     font-family: "Product Sans", "Google Sans";
     margin-left: 8px;
-    text-transform: lowercase;
+    text-transform: lowercase; */
 
     position: absolute;
     left: 20px;
