--- a/cwsoffline/cwsstore/app/templates/index.html
+++ b/cwsoffline/cwsstore/app/templates/index.html
@@ -5,22 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offline Chrome Web Store</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="/static/js/tailwindcss_3.4.16.js"></script>
     <link rel="icon" href="/static/images/icon_48px.png" sizes="48x48">
     <link rel="icon" href="/static/images/icon_96px.png" sizes="96x96">
     <link rel="icon" href="/static/images/icon_144px.png" sizes="144x144">
 </head>
 <body>
-    <header>
-        <div class="DpcOrc">
-        <svg class="favicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="192" viewBox="0 0 192 192" width="192"><path d="M0 0h192v192H0z" fill="none"/><defs><path d="M8 20v140c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12V20H8zm108 32H76c-4.42 0-8-3.58-8-8s3.58-8 8-8h40c4.42 0 8 3.58 8 8s-3.58 8-8 8z" id="a"/></defs><clipPath id="b"><use overflow="visible" xlink:href="#a"/></clipPath><path clip-path="url(#b)" d="M8 20h176v152H8z" fill="#eee"/><path clip-path="url(#b)" d="M116 36H76c-4.42 0-8 3.58-8 8s3.58-8 8-8h40c4.42 0 8-3.58 8-8s-3.58-8-8-8z" fill="#fff"/><g clip-path="url(#b)"><defs><circle cx="96" cy="160" id="c" r="76"/></defs><clipPath id="d"><use overflow="visible" xlink:href="#c"/></clipPath><path clip-path="url(#d)" d="M32.07 84v93.27h34.01L96 125.45h76V84zm0 0v93.27h34.01L96 125.45h76V84z" fill="#DB4437"/><path clip-path="url(#d)" d="M20 236h72.34l33.58-33.58v-25.14l-59.84-.01L20 98.24zm0 0h72.34l33.58-33.58v-25.14l-59.84-.01L20 98.24z" fill="#0F9D58"/><path clip-path="url(#d)" d="M96 125.45l29.92 51.82L92.35 236H172V125.45zm0 0l29.92 51.82L92.35 236H172V125.45z" fill="#FFCD40"/><g clip-path="url(#d)"><circle cx="96" cy="160" fill="#F1F1F1" r="34.55"/><circle cx="96" cy="160" fill="#4285F4" r="27.64"/></g></g><path clip-path="url(#b)" d="M8 20h176v76H8z" fill="#212121" fill-opacity=".05"/><path d="M8 95h176v1H8z" fill="#212121" fill-opacity=".02"/><path d="M8 96h176v1H8z" fill="#fff" fill-opacity=".05"/><path d="M116 52H76c-4.25 0-7.72-3.32-7.97-7.5-.02.17-.03.33-.03.5 0 4.42 3.58 8 8 8h40c4.42 0 8-3.58 8-8 0-.17-.01-.33-.03-.5-.25 4.18-3.72 7.5-7.97 7.5zM8 20v1h176v-1H8z" fill="#212121" fill-opacity=".02"/><path d="M76 36h40c4.25 0 7.72 3.32 7.97 7.5.01-.17.03-.33.03-.5 0-4.42-3.58-8-8-8H76c-4.42 0-8 3.58-8 8 0 .17.01.33.03.5.25-4.18 3.72-7.5 7.97-7.5zm96 135H20c-6.6 0-12-5.4-12-12v1c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12v-1c0 6.6-5.4 12-12 12z" fill="#231F20" fill-opacity=".1"/><radialGradient cx="7.502" cy="19.344" gradientUnits="userSpaceOnUse" id="e" r="227.596"><stop offset="0" stop-color="#fff" stop-opacity=".1"/><stop offset="1" stop-color="#fff" stop-opacity="0"/></radialGradient><path d="M8 20v140c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12V20H8zm108 32H76c-4.42 0-8-3.58-8-8s3.58-8 8-8h40c4.42 0 8 3.58 8 8s-3.58 8-8 8z" fill="url(#e)"/></svg>
-        <span class="">Offline Chrome Web Store</span>
+    <!-- <header>
+        <div class="ySDJfc">
+            <div class="I1b9kc">
+            <svg class="favicon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="192" viewBox="0 0 192 192" width="192"><path d="M0 0h192v192H0z" fill="none"/><defs><path d="M8 20v140c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12V20H8zm108 32H76c-4.42 0-8-3.58-8-8s3.58-8 8-8h40c4.42 0 8 3.58 8 8s-3.58 8-8 8z" id="a"/></defs><clipPath id="b"><use overflow="visible" xlink:href="#a"/></clipPath><path clip-path="url(#b)" d="M8 20h176v152H8z" fill="#eee"/><path clip-path="url(#b)" d="M116 36H76c-4.42 0-8 3.58-8 8s3.58-8 8-8h40c4.42 0 8-3.58 8-8s-3.58-8-8-8z" fill="#fff"/><g clip-path="url(#b)"><defs><circle cx="96" cy="160" id="c" r="76"/></defs><clipPath id="d"><use overflow="visible" xlink:href="#c"/></clipPath><path clip-path="url(#d)" d="M32.07 84v93.27h34.01L96 125.45h76V84zm0 0v93.27h34.01L96 125.45h76V84z" fill="#DB4437"/><path clip-path="url(#d)" d="M20 236h72.34l33.58-33.58v-25.14l-59.84-.01L20 98.24zm0 0h72.34l33.58-33.58v-25.14l-59.84-.01L20 98.24z" fill="#0F9D58"/><path clip-path="url(#d)" d="M96 125.45l29.92 51.82L92.35 236H172V125.45zm0 0l29.92 51.82L92.35 236H172V125.45z" fill="#FFCD40"/><g clip-path="url(#d)"><circle cx="96" cy="160" fill="#F1F1F1" r="34.55"/><circle cx="96" cy="160" fill="#4285F4" r="27.64"/></g></g><path clip-path="url(#b)" d="M8 20h176v76H8z" fill="#212121" fill-opacity=".05"/><path d="M8 95h176v1H8z" fill="#212121" fill-opacity=".02"/><path d="M8 96h176v1H8z" fill="#fff" fill-opacity=".05"/><path d="M116 52H76c-4.25 0-7.72-3.32-7.97-7.5-.02.17-.03.33-.03.5 0 4.42 3.58 8 8 8h40c4.42 0 8-3.58 8-8 0-.17-.01-.33-.03-.5-.25 4.18-3.72 7.5-7.97 7.5zM8 20v1h176v-1H8z" fill="#212121" fill-opacity=".02"/><path d="M76 36h40c4.25 0 7.72 3.32 7.97 7.5.01-.17.03-.33.03-.5 0-4.42-3.58-8-8-8H76c-4.42 0-8 3.58-8 8 0 .17.01.33.03.5.25-4.18 3.72-7.5 7.97-7.5zm96 135H20c-6.6 0-12-5.4-12-12v1c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12v-1c0 6.6-5.4 12-12 12z" fill="#231F20" fill-opacity=".1"/><radialGradient cx="7.502" cy="19.344" gradientUnits="userSpaceOnUse" id="e" r="227.596"><stop offset="0" stop-color="#fff" stop-opacity=".1"/><stop offset="1" stop-color="#fff" stop-opacity="0"/></radialGradient><path d="M8 20v140c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12V20H8zm108 32H76c-4.42 0-8-3.58-8-8s3.58-8 8-8h40c4.42 0 8 3.58 8 8s-3.58 8-8 8z" fill="url(#e)"/></svg>
+            <span class="DpcOrc">Offline Chrome Web Store</span>
+
+            </div>
         </div>
-        <button class="theme-switch" id="themeToggle">🌒</button>
-        <!--<h1>Offline Chrome Web Store</h1>-->
+        <button class="theme-switch" id="themeToggle">🌒</button>        
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search extensions...">
         </div>
-    </header>
+    </header> -->
+    <header id="header" class="flex items-center justify-between px-6 py-4 shadow">
+    <!-- Left: Icon + Brand -->
+    <div class="flex items-center gap-2">
+      <!-- SVG Icon -->
+      <svg class="w-10 h-10 text-indigo-600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="192" viewBox="0 0 192 192" width="192"><path d="M0 0h192v192H0z" fill="none"/><defs><path d="M8 20v140c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12V20H8zm108 32H76c-4.42 0-8-3.58-8-8s3.58-8 8-8h40c4.42 0 8 3.58 8 8s-3.58 8-8 8z" id="a"/></defs><clipPath id="b"><use overflow="visible" xlink:href="#a"/></clipPath><path clip-path="url(#b)" d="M8 20h176v152H8z" fill="#eee"/><path clip-path="url(#b)" d="M116 36H76c-4.42 0-8 3.58-8 8s3.58-8 8-8h40c4.42 0 8-3.58 8-8s-3.58-8-8-8z" fill="#fff"/><g clip-path="url(#b)"><defs><circle cx="96" cy="160" id="c" r="76"/></defs><clipPath id="d"><use overflow="visible" xlink:href="#c"/></clipPath><path clip-path="url(#d)" d="M32.07 84v93.27h34.01L96 125.45h76V84zm0 0v93.27h34.01L96 125.45h76V84z" fill="#DB4437"/><path clip-path="url(#d)" d="M20 236h72.34l33.58-33.58v-25.14l-59.84-.01L20 98.24zm0 0h72.34l33.58-33.58v-25.14l-59.84-.01L20 98.24z" fill="#0F9D58"/><path clip-path="url(#d)" d="M96 125.45l29.92 51.82L92.35 236H172V125.45zm0 0l29.92 51.82L92.35 236H172V125.45z" fill="#FFCD40"/><g clip-path="url(#d)"><circle cx="96" cy="160" fill="#F1F1F1" r="34.55"/><circle cx="96" cy="160" fill="#4285F4" r="27.64"/></g></g><path clip-path="url(#b)" d="M8 20h176v76H8z" fill="#212121" fill-opacity=".05"/><path d="M8 95h176v1H8z" fill="#212121" fill-opacity=".02"/><path d="M8 96h176v1H8z" fill="#fff" fill-opacity=".05"/><path d="M116 52H76c-4.25 0-7.72-3.32-7.97-7.5-.02.17-.03.33-.03.5 0 4.42 3.58 8 8 8h40c4.42 0 8-3.58 8-8 0-.17-.01-.33-.03-.5-.25 4.18-3.72 7.5-7.97 7.5zM8 20v1h176v-1H8z" fill="#212121" fill-opacity=".02"/><path d="M76 36h40c4.25 0 7.72 3.32 7.97 7.5.01-.17.03-.33.03-.5 0-4.42-3.58-8-8-8H76c-4.42 0-8 3.58-8 8 0 .17.01.33.03.5.25-4.18 3.72-7.5 7.97-7.5zm96 135H20c-6.6 0-12-5.4-12-12v1c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12v-1c0 6.6-5.4 12-12 12z" fill="#231F20" fill-opacity=".1"/><radialGradient cx="7.502" cy="19.344" gradientUnits="userSpaceOnUse" id="e" r="227.596"><stop offset="0" stop-color="#fff" stop-opacity=".1"/><stop offset="1" stop-color="#fff" stop-opacity="0"/></radialGradient><path d="M8 20v140c0 6.6 5.4 12 12 12h152c6.6 0 12-5.4 12-12V20H8zm108 32H76c-4.42 0-8-3.58-8-8s3.58-8 8-8h40c4.42 0 8 3.58 8 8s-3.58 8-8 8z" fill="url(#e)"/></svg>
+
+      <!-- Text -->
+      <span class="text-lg font-semibold">Offline Chrome Web Store</span>
+    </div>
+
+    <!-- Center: Search Bar with Icon -->
+    <div class="relative flex-1 max-w-md mx-6">
+      <!-- Search Icon -->
+      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+        <svg class="w-5 h-5 text-gray-400" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M20.49 19l-5.73-5.73C15.53 12.2 16 10.91 16 9.5A6.5 6.5 0 1 0 9.5 16c1.41 0 2.7-.47 3.77-1.24L19 20.49 20.49 19zM5 9.5C5 7.01 7.01 5 9.5 5S14 7.01 14 9.5 11.99 14 9.5 14 5 11.99 5 9.5z"></path>
+        </svg>
+      </div>
+      <!-- Input -->
+      <input
+        id="searchInput"
+        type="text"
+        placeholder="Search extensions"
+        class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-full shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
+      />
+    </div>
+
+    <!-- Right: Neutral Gray Button with Moon Emoji -->
+    <div>
+      <button id="themeToggle" class="theme-switch px-2 py-1 rounded-full transition">🌒</button>
+    </div>
+  </header>
     <main>
         <div class="extensions-container">
             {% if extensions %}
@@ -39,7 +75,7 @@
                             <p class="extension-description">{{ extension.description }}</p>
                             </br>
                             <p></p>
-                            <a href="{{ extension.versions[0].path_url }}" class="download-button">Install</a>
+                            <a href="{{ extension.versions[0].path_url }}" class="download-button">Add to Chrome</a>
                         </div>
                     </div>
                     {% endfor %}
